# pyhole

./: .dockerignore  .gitignore  .mailmap  .pylintrc  .travis.yml  AUTHORS  Dockerfile  MANIFEST.in  README  README.md  pyhole.cfg  pyhole.cfg.dist  pyhole.conf.example  pyhole.conf.sample  pyhole.py  pylintrc  requirements.txt  run_tests.py  setup.cfg  setup.py
doc/: conf.py  github.rst  guidelines.rst  index.rst  installation.rst  plugins.rst  pyhole.rst  tests.rst  writing.rst
docs/: Makefile  conf.py  guidelines.rst  index.rst  installation.rst  make.bat  plugins.rst  pyhole.rst  tests.rst  writing.rst
modules/: __init__.py  admin.py  entertainment.py  search.py  weather.py
plugins/: __init__.py  admin.py  chat.py  cleverbot.py  dice.py  entertainment.py  kernel.py  keywords.py  launchpad.py  news.py  redmine.py  search.py  task.py  urls.py  weather.py
pyhole/: __init__.py  client.py  config.py  irc.py  irclib.py  log.py  main.py  plugin.py  utils.py  version.py
pyhole/core/: __init__.py  api.py  color.py  colormap.py  config.py  log.py  logger.py  plugin.py  process.py  queue.py  request.py  utils.py  version.py
pyhole/plugins/: __init__.py  admin.py  allergies.py  boxoffice.py  calculator.py  cleverbot.py  dice.py  distance.py  jeera.py  jira.py  kernel.py  launchpad.py  (+12 more)
tests/: __init__.py  test_color.py  test_config.py  test_irc.py  test_log.py  test_mirccolors.py  test_utils.py  test_version.py
tools/: docker_build.sh  docker_deploy.sh  docker_run.sh  docker_stop.sh  generate_authors.sh  pip-requires  remove_pycs.sh  run_pyhole.sh  run_tests.sh
(+79 files in other folders)
