[metadata]
name =  irc-pyhole
author = Josh Kearney
author_email = josh@jk0.org
summary = A modular IRC & Slack bot for Python developers.
description-file = README.md
home-page = https://github.com/jk0/pyhole
classifier = 
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    
[files]
packages = pyhole

[flake8]
# NOTE(jk0): Ignore 'undefined name' warnings from setattrs() in plugin.py.
ignore = F281

[build_sphinx]
source-dir = doc
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
